<resources>
    <string name="app_name" translatable="false">Surprix</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">1965236533694397</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1965236533694397</string>
    <string name="action_settings">Settings</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="surprise">Surprise</string>
    <string name="who_have_what_you_miss">Users who have you are looking for:</string>
    <string name="nobody_have_what_you_miss">Unfortunately, nobody have what you are looking for</string>
    <string name="username" translatable="false">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="login" translatable="false">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_yout_password">Have you forgot the password?</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="set">Set</string>
    <string name="year">Year</string>
    <string name="producer">Product</string>
    <string name="country">From</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="create_your_account">Create your account and become a member of Surprix!</string>
    <string name="complete_account">Complete your account</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="send_email">Send e-mail</string>
    <string name="missings">Missings</string>
    <string name="doubles">Doubles</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="data_sync_error">Data synchronization error</string>
    <string name="added_to_missings">Added to missings</string>
    <string name="added_to_doubles">Added to doubles</string>
    <string name="home" translatable="false">Home</string>
    <string name="user_added">User updated</string>
    <string name="wrong_email_or_password">Wrong E-mail or Password</string>
    <string name="mail_successfully_sent">E-mail successfully sent</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="old_password_wrong">Old password incorrect</string>
    <string name="signup_complete_all_fields">Complete all fields before submit registration</string>
    <string name="signup_password_lenght">Password must be a minimum of 6 characters</string>
    <string name="delete_account">Delete Account</string>
    <string name="dialog_add_set_title">Add set</string>
    <string name="dialog_add_set_text">Do you want to add to the missing list the complete set</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Discard</string>
    <string name="dialog_add_year_title">Add year</string>
    <string name="dialog_add_year_text">Do you want to add to the missing list the complete year</string>
    <string name="dialod_delete_user_text">Do you want to delete you user account finally?</string>
    <string name="dateFormat" translatable="false">dd/MM/yyyy</string>
    <string name="welcome_info">"Welcome in "</string>
    <string name="username_existing">Username already exists</string>
    <string name="remove_missing_dialog_title">Remove from missing</string>
    <string name="remove_missing_dialog_text">Do you want to remove from the missing list</string>
    <string name="remove_double_dialog_title">Remove from doubles</string>
    <string name="remove_double_dialog_text">Do you want to remove from doubles</string>
    <string name="network_not_available">Network not available, check your internet connection</string>
    <string name="list_is_empty">List is empty. You can add items from the catalog!</string>
    <string name="save">Save</string>
    <string name="tutorial">Tutorial</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="catalog">Catalog</string>
    <string name="onboarding_catalog_content">Navigate into a ever-growing catalog</string>
    <string name="create_lists">Create your lists</string>
    <string name="make_exchange">Make an exchange</string>
    <string name="onboarding_search_content">Search by code, description and set</string>
    <string name="menu">Menu</string>
    <string name="onboarding_menu_content">Navigate to doubles and other functions</string>
    <string name="onboarding_icon">Onboarding icon</string>
    <string name="add_to_missings">Add to missings</string>
    <string name="add_to_doubles">Add to doubles</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="check_if_someone_has_what_you_need">Check if someone has what you need</string>
    <string name="send_an_e_mail">Send an e-mail</string>
    <string name="thanks_to">Thanks to</string>
    <string name="thanks_to_title">Thanks to...</string>
    <string name="surprise_image">surprise image</string>
    <string name="icon_logo">icon logo</string>
    <string name="icon_username">icon username</string>
    <string name="icon_email">icon email</string>
    <string name="icon_password">icon password</string>
    <string name="set_image">set image</string>
    <string name="banner">banner</string>
    <string name="mail_subject" translatable="false">Surprix - %1$s</string>
    <string name="mail_exchange_body"><![CDATA[Hi,         <div>I\'m %1$s, thanks to Surprix I\'ve seen you have %2$s - %3$s available into your doubles, and I\'m interested in it.</div>         <div>Would you like to make an exchange?</div>]]></string>
    <string name="mailto_surprix" translatable="false">mailto:info.surprix@gmail.com</string>
    <string name="double_owners_dialog_title" translatable="false">%s - %s</string>
    <string name="need_help">Need help?</string>
    <string name="ok_thanks">Ok,thanks</string>
    <string name="tip_you_can_add_all_set">If you press the round green button, you can add the complete set to your missings list!</string>
    <string name="smart_tip">Smart tip</string>
    <string name="tip_you_can_add_all_year">If you keep pressed a year, you can add it completely to your missings list!</string>
    <string name="network_unavailable">Network connection not available. Please retry later</string>
    <string name="info_privacy_1">Surprix takes care about your privacy and requires only very little infos about you.</string>
    <string name="info_privacy_2">Your e-mail address is used to authenticate you, recover your credentials and to be contacted for exchanges.</string>
    <string name="info_privacy_3">The nation is used to show you the collectors of your country first.</string>
    <string name="signup_email_format">Please check the e-mail format</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_text"><![CDATA[<p>This privacy policy has been compiled to inform users about which personal data are collected in Surprix. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information.</p>
        <div><strong>What personal information do we collect from the people that register to Surprix?</strong></div>
        <div>When registering on our app, as appropriate, you may be asked to enter your email address and your country.</div>
        <div><strong>When do we collect information?</strong></div>
        <div>We collect information from you when you register on our app or enter information on our app.</div>
        <div>
        <div><strong>How do we use your information?</strong></div>
        <div>We use your email address to&nbsp;authenticate you inside the app. The using of the email is necessary for password recovery and to be contacted by other users for making exchanges.</div>
        <div>We ask your country to improve your experience on the app, like showing you, when necessary, users of your country at first.</div>
        <div><strong>How do we protect your information?</strong></div>
        <div>We implement a variety of security measures when a user enters, submits, or accesses their information to maintain the safety of your personal information.</div>
        <div>To do so, all the Authentication is handled by Google Firebase Authentication, which stores, protect and provide services for password recovery and data deletion.</div>
        <div>Other information, are maintained behind secured networks and is only accessible by a limited number of persons who have special access rights to such systems and are required to keep the information confidential.</div>
        <div><strong>Do we use \'cookies\'?</strong></div>
        <div>We do not use cookies for tracking purposes</div>
        <div><strong>Third-party disclosure</strong></div>
        <div>We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.</div>
        <div><strong>Third-party links</strong></div>
        <div>We do not include or offer third-party products or services on our app.</div>
        <div><strong>Fair Information Practices</strong></div>
        <div>The Fair Information Practices Principles form the backbone of privacy law in the United States and the concepts they include have played a significant role in the development of data protection laws around the globe. Understanding the Fair Information Practice Principles and how they should be implemented is critical to comply with the various privacy laws that protect personal information.<br /><strong>In order to be in line with Fair Information Practices we will take the following responsive action, should a data breach occur:</strong></div>
        <div>We will notify you via email within 1 business day</div>
        <div><br />We also agree to the Individual Redress Principle which requires that individuals have the right to legally pursue enforceable rights against data collectors and processors who fail to adhere to the law. This principle requires not only that individuals have enforceable rights against data users, but also that individuals have recourse to courts or government agencies to investigate and/or prosecute non-compliance by data processors.</div>
        </div>
        <div>
        <div><strong>Contacting Us</strong></div>
        <div>If there are any questions regarding this privacy policy, you may contact us using the email below:</div>
        <div><em>info.surprix@gmail.com</em></div>
        </div>]]>
    </string>
    <string name="terms_agree">I agree with terms</string>
    <string name="difficulty">Rarity:</string>
    <string name="default_notification_channel_id" translatable="false">surprix_default</string>
    <string name="default_notification_channel_name" translatable="false">SurprixDefault</string>
    <string name="title_missing_list">Missing list</string>
    <string name="title_double_list">Double list</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_years">Years</string>
    <string name="title_sets">Sets</string>
    <string name="title_details_list">Surprises</string>
</resources>