<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/lbl_reg_info_firstlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_reg_info_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_reg_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_reg_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/birthday" />

    <EditText
        android:id="@+id/edit_reg_nation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/country" />

    <Button
        android:id="@+id/btn_reg_change_pwd"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="5dp"
        android:layout_row="16"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:text="@string/change_password"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_reg_submit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="16"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:text="REGISTRATI"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_reg_complete_account"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="16"
        android:background="@android:color/holo_green_dark"
        android:elevation="2dp"
        android:text="AVANTI"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="gone" />

</LinearLayout>