<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/lbl_reg_info_firstlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_reg_info_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_reg_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/btn_reg_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_password"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btn_reg_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_account"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_reg_email"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_mail"
            android:contentDescription="@string/icon_email" />

        <EditText
            android:id="@+id/edit_reg_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_reg_username"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon_username"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_person_black" />

        <EditText
            android:id="@+id/edit_reg_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_reg_pwd"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_key"
            android:contentDescription="@string/icon_password" />

        <EditText
            android:id="@+id/edit_reg_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/edit_reg_nation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/country"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/edit_reg_birthdate"
            android:inputType="textAutoComplete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_reg_complete_account"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_reg_submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:foregroundGravity="top"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:gravity="bottom|left"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lbl_reg_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>