<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/login_dialog_email"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_dialog_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_dialog_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnImportantBackground"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/btnImportantText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lbl_login_forgotten_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/forgot_yout_password"
        android:textAlignment="center"
        android:textColor="@color/linkColor"
        android:textSize="16sp" />
</LinearLayout>